home/restic-rest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restic
  namespace: restic-rest
spec:
  type: ClusterIP
  selector:
    app: restic
  ports:
  - name: restic
    protocol: TCP
    port: 8000
    targetPort: restic-http
